update:bike shop Docs and CRUD
